# toolscripts

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  manage.py  pyproject.toml  requirements.txt
.agents/skills/_shared/: CONVENTIONS.md
.agents/skills/toolscripts-command-add/: SKILL.md
.agents/skills/toolscripts-command-modify/: SKILL.md
.agents/skills/toolscripts-command-remove/: SKILL.md
ai/: AGENTS.md  agents_cleanup.py  agents_setup.py  aido_models.py  ccswitch.py  curses_ui.py  free_models_nvidia.py  free_models_openrouter.py  npm-tools.py  npm_tools.py  openrouter_free_models.py
ai/agents/: debugger.md  planner.md  verifier.md
ai/skills/: code-review.md
ai/skills/code-review/: SKILL.md
ai/skills/code-review-staged/: SKILL.md
ai/skills/figma/: API_REFERENCE.md  README.md  SKILL.md
ai/skills/figma/scripts/: figma_export.py  figma_fetch.py
ai/skills/skill-creator/: SKILL.md
ai/skills/skill-creator/scripts/: improve_description.py
ai/skills/slidev/: SKILL.md
android/: adbsync  android-record.py  android_deeplink.py  android_input_text.py  android_record.py  android_utils.py  batch_install.py  emulator.py  logcat-tag.py  rename_project.py  retrieve-images.py  retrieve-media-files.py  screencast.py
calc/: dec2bin.py  dec2hex.py  hex2bin.py  hex2dec.py
codec/: decode_and_format_json.py  url-params-decode.py
cpp/: list_include_dirs.py
credential/: basic_auth.py  jwt_decode.py  mask_secrets.py  redact-clipboard.py  uuid_gen.py
db/mongo/: config.json  dump.sh  run.py
db/mongo/dump/: README.md
docker/registry/: config.yml  default_config.json  docker-registry.py
docs/: figma-skill-plan.md  ios-tools-guide.md
document/: markdown.py  slugify.py
excel/: convert-text2num.py
file/: json_format.py
game/: extract_games.py
git/: apply_patches.py  copy_diff.py  delete_branch.py  install_sensitive_commit_msg_hook.py  make_patches.py
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
image/: kindle-pdf-cropper.py
ios/: ios_log.py  ios_record.py  simulator.py
iterm/: README.md  split_vertical_quarter.py
jenkins/: install-jenkins-ubuntu.sh  jenkins-service-op.md
libs/: AGENTS.md  clipboard.py
media/: resize_images.py
pdf/: kindle-pdf-cropper.py  pdf_merge.py
plot/: gs_statcounter_os_version_coverage.py  mermaid.py  os_version_coverage.py
security/: axios-audit.py
shell/: ado  agentrun  agents-cleanup  agents-setup  agentsmd-links  ai-agentsmd-links  ai-cli-install  ai-links  aido  aido-models  android-adbsync  android-batch-install  android-cp-drawable  android-deeplink  android-emulator  android-input-text  android-keystore-generate  android-logcat  android-record  android-rename-project  android-retrieve-media-files  android-screencast  android-studio  axios-audit  basic-auth  ccswitch  checkspace  checkspace.sh  cleanup  code-cli-install  code-desensitization  code-review  code-review-staged  convert-oneline  date2timestamp  dec2bin  dec2hex  decode-and-format-json  delete-ds-store  delete-meta-files  (+72 more)
src/toolscripts/: __init__.py
src/toolscripts/adb/: __init__.py  devices.py
src/toolscripts/commands/: __init__.py
src/toolscripts/commands/ai/: __init__.py  _integrations.py  agents_cleanup.py  agents_setup.py  ai_links.py  aido.py  ccswitch.py  free_models_nvidia.py  free_models_openrouter.py  graphify_setup.py  llamacmd.py  npm_tools.py  tools.py
src/toolscripts/commands/android/: __init__.py  _video.py  adbsync.py  batch_install.py  cp_drawable.py  deeplink.py  emulator.py  input_text.py  keystore_generate.py  log.py  logcat.py  record.py  rename_project.py  retrieve_media.py  screencast.py  screenshot.py  studio.py
src/toolscripts/commands/calc/: __init__.py  dec2bin.py  dec2hex.py  hex2bin.py  hex2dec.py  hex2rgb.py
src/toolscripts/commands/codec/: __init__.py  convert_oneline.py  decode_format_json.py  json_format.py  url_decode_params.py
src/toolscripts/commands/cpp/: __init__.py  list_include.py
src/toolscripts/commands/credential/: __init__.py  basic_auth.py  jwt_decode.py  oauth_code.py  pem_to_oneline.py  redact_clipboard.py  uuid_gen.py
src/toolscripts/commands/db/: __init__.py  mongo.py
src/toolscripts/commands/docker/: __init__.py  dockercmd.py  linux_env.py  registry.py
src/toolscripts/commands/games/: __init__.py  extract_games.py
src/toolscripts/commands/git/: alias_setup.py  apply_patches.py  branch_delete.py  copy_diff.py  delete_branch.py  delete_local_branches.py  make_patches.py  merge_to_main.py  quick_commit.py  sensitive_hook.py  user.py  user_batch.py
src/toolscripts/commands/ios/: __init__.py  deeplink.py  ios_log.py  log.py  log_tail.py  record.py  simulator.py  xcode_terminal.py
src/toolscripts/commands/media/: __init__.py  _ffmpeg_quality.py  img_resize.py  img_scale.py  imgcat.py  kindle_pdf_cropper.py  mov_to_mp4.py  mp3_to_pcm.py  mp4_compress.py  mp4cut.py  mp4togif.py  pdf_merge.py  playsound.py  record_audio.py  remove_watermark.py  trim_audio.py
src/toolscripts/commands/security/: __init__.py  axios_audit.py
src/toolscripts/commands/system/: __init__.py  checkspace.py  cleanup.py  dirdiff.py  dotnet_globaljson.py  dotnet_switch.py  ide.py  iterm_setup.py  kill_pwchrome.py  list_commands.py  lsdevcu.py  myip.py  rm_ds_store.py  rm_meta.py  uv_venv_create.py  uvcmd.py  venv_activate.py  venv_create.py
src/toolscripts/commands/text/: __init__.py  doc_pick.py  markdown.py  mermaid.py  slugify.py  statcounter.py  text2num.py  translate.py  web2md.py
src/toolscripts/commands/time/: __init__.py  from_date.py  now.py  offset.py  to_date.py
src/toolscripts/core/: __init__.py  clipboard.py  colors.py  log.py  platform.py  prompts.py  shell.py  ui_curses.py
src/toolscripts/data/ai/: AGENTS.md
src/toolscripts/data/iterm/: split_vertical_quarter.py
src/toolscripts/git_utils/: __init__.py  repo.py
src/toolscripts/ios/: __init__.py  devices.py  log_parser.py
time/: date2timestamp.py  timestamp2date.py  timestamp_offset.py  timestamp_time.py
translate/: translate_tool.py
utils/: clipboard.py
web/: web2md.py
(+5 files in other folders)
