[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolscripts"
version = "0.2.0"
description = "A monorepo of cross-platform CLI utilities to make work simple."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "jiemeng" }]
keywords = ["cli", "toolscripts", "developer-tools", "android", "ios", "git"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
clipboard = ["pyperclip>=1.9,<1.10"]
media = [
    "pillow>=11.1,<11.2",
    "matplotlib>=3.10,<3.11",
]
office = ["openpyxl>=3.1,<3.2"]
text = [
    "markdownify>=1.2,<1.3",
    "translate>=3.6,<3.7",
    "binaryornot>=0.4,<0.5",
]
windows = ['windows-curses>=2.3; sys_platform == "win32"']
all = [
    "toolscripts[clipboard,media,office,text,windows]",
]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/jiemeng/toolscripts"
Repository = "https://github.com/jiemeng/toolscripts"

# ---------------------------------------------------------------------------
# Console scripts.
#
# Naming convention:
#   - kebab-case command names (preserve user muscle memory)
#   - snake_case Python module names
# ---------------------------------------------------------------------------
[project.scripts]
# time
timestamp-now             = "toolscripts.commands.time.now:main"
timestamp2date            = "toolscripts.commands.time.to_date:main"
date2timestamp            = "toolscripts.commands.time.from_date:main"
timestamp-offset          = "toolscripts.commands.time.offset:main"

# calc
dec2bin                   = "toolscripts.commands.calc.dec2bin:main"
dec2hex                   = "toolscripts.commands.calc.dec2hex:main"
hex2bin                   = "toolscripts.commands.calc.hex2bin:main"
hex2dec                   = "toolscripts.commands.calc.hex2dec:main"
hex2rgb                   = "toolscripts.commands.calc.hex2rgb:main"

# codec
json-format               = "toolscripts.commands.codec.json_format:main"
decode-format-json        = "toolscripts.commands.codec.decode_format_json:main"
url-params-decode         = "toolscripts.commands.codec.url_decode_params:main"
convert-oneline           = "toolscripts.commands.codec.convert_oneline:main"

# credential
jwt-decode                = "toolscripts.commands.credential.jwt_decode:main"
basic-auth                = "toolscripts.commands.credential.basic_auth:main"
uuid-gen                  = "toolscripts.commands.credential.uuid_gen:main"
redact-clipboard          = "toolscripts.commands.credential.redact_clipboard:main"
pem-to-oneline            = "toolscripts.commands.credential.pem_to_oneline:main"
oauth-code                = "toolscripts.commands.credential.oauth_code:main"

# git
git-copy-diff             = "toolscripts.commands.git.copy_diff:main"
git-delete-branch         = "toolscripts.commands.git.delete_branch:main"
git-delete-local-branches = "toolscripts.commands.git.delete_local_branches:main"
git-make-patches          = "toolscripts.commands.git.make_patches:main"
git-apply-patches         = "toolscripts.commands.git.apply_patches:main"
git-install-sensitive-hook = "toolscripts.commands.git.sensitive_hook:main"
git-user                  = "toolscripts.commands.git.user:main"
git-user-batch            = "toolscripts.commands.git.user_batch:main"

# android
android-record            = "toolscripts.commands.android.record:main"
android-deeplink          = "toolscripts.commands.android.deeplink:main"
android-input-text        = "toolscripts.commands.android.input_text:main"
android-screencast        = "toolscripts.commands.android.screencast:main"
android-logcat            = "toolscripts.commands.android.logcat:main"
android-emulator          = "toolscripts.commands.android.emulator:main"
android-batch-install     = "toolscripts.commands.android.batch_install:main"
android-retrieve-media    = "toolscripts.commands.android.retrieve_media:main"
android-rename-project    = "toolscripts.commands.android.rename_project:main"
android-adbsync           = "toolscripts.commands.android.adbsync:main"
android-cp-drawable       = "toolscripts.commands.android.cp_drawable:main"
android-keystore-generate = "toolscripts.commands.android.keystore_generate:main"
android-studio            = "toolscripts.commands.android.studio:main"

# ios
ios-log                   = "toolscripts.commands.ios.log:main"
ios-record                = "toolscripts.commands.ios.record:main"
ios-simulator             = "toolscripts.commands.ios.simulator:main"
xcode-terminal            = "toolscripts.commands.ios.xcode_terminal:main"

# media (image/audio/video/pdf)
img-resize                = "toolscripts.commands.media.img_resize:main"
img-scale                 = "toolscripts.commands.media.img_scale:main"
imgcat                    = "toolscripts.commands.media.imgcat:main"
playsound                 = "toolscripts.commands.media.playsound:play_main"
stopsound                 = "toolscripts.commands.media.playsound:stop_main"
mp4-compress              = "toolscripts.commands.media.mp4_compress:main"
mov-to-mp4                = "toolscripts.commands.media.mov_to_mp4:main"
mp4cut                    = "toolscripts.commands.media.mp4cut:main"
mp4togif                  = "toolscripts.commands.media.mp4togif:main"
mp3-to-pcm                = "toolscripts.commands.media.mp3_to_pcm:main"
remove-watermark          = "toolscripts.commands.media.remove_watermark:main"
pdf-merge                 = "toolscripts.commands.media.pdf_merge:main"
kindle-pdf-cropper        = "toolscripts.commands.media.kindle_pdf_cropper:main"

# ai tooling
ccswitch                  = "toolscripts.commands.ai.ccswitch:main"
aido                      = "toolscripts.commands.ai.aido:run_main"
aido-models               = "toolscripts.commands.ai.aido:models_main"
free-models-openrouter    = "toolscripts.commands.ai.free_models_openrouter:main"
free-models-nvidia        = "toolscripts.commands.ai.free_models_nvidia:main"
agents-setup              = "toolscripts.commands.ai.agents_setup:main"
agents-cleanup            = "toolscripts.commands.ai.agents_cleanup:main"
ai-links                  = "toolscripts.commands.ai.ai_links:main"
npm-tools                 = "toolscripts.commands.ai.npm_tools:main"

# text / docs / web
markdown-snippet          = "toolscripts.commands.text.markdown:main"
slugify                   = "toolscripts.commands.text.slugify:main"
web2md                    = "toolscripts.commands.text.web2md:main"
translate                 = "toolscripts.commands.text.translate:main"
mermaid                   = "toolscripts.commands.text.mermaid:main"
statcounter-os-coverage   = "toolscripts.commands.text.statcounter:main"
xlsx-text2num             = "toolscripts.commands.text.text2num:main"

# system / files
myip                      = "toolscripts.commands.system.myip:main"
checkspace                = "toolscripts.commands.system.checkspace:main"
lsdevcu                   = "toolscripts.commands.system.lsdevcu:main"
rm-ds-store               = "toolscripts.commands.system.rm_ds_store:main"
rm-meta                   = "toolscripts.commands.system.rm_meta:main"
dirdiff                   = "toolscripts.commands.system.dirdiff:main"
intellij                  = "toolscripts.commands.system.ide:intellij_main"
pycharm                   = "toolscripts.commands.system.ide:pycharm_main"
xcode                     = "toolscripts.commands.system.ide:xcode_main"
cleanup                   = "toolscripts.commands.system.cleanup:main"
venv-create               = "toolscripts.commands.system.venv_create:main"
uv-venv-create            = "toolscripts.commands.system.uv_venv_create:main"
uvcmd                     = "toolscripts.commands.system.uvcmd:main"
iterm-setup               = "toolscripts.commands.system.iterm_setup:main"

# security / docker / db / cpp / games
axios-audit               = "toolscripts.commands.security.axios_audit:main"
extract-games             = "toolscripts.commands.games.extract_games:main"
list-include-dirs-from-here = "toolscripts.commands.cpp.list_include:from_here_main"
list-include-dirs-clang   = "toolscripts.commands.cpp.list_include:clang_main"
dockercmd                 = "toolscripts.commands.docker.dockercmd:main"
docker-linux-env          = "toolscripts.commands.docker.linux_env:main"
docker-registry           = "toolscripts.commands.docker.registry:main"
mongo-tool                = "toolscripts.commands.db.mongo:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
toolscripts = ["data/**/*"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["scripts", "data"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long (formatter handles it)
    "SIM102", # nested ifs (often clearer than `and`)
    "SIM103", # `return bool(...)` rewrites
    "SIM108", # ternary nag
    "SIM112", # uppercased env vars (we follow upstream casing on Apple platforms)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
